--- a/pportafolio/css/_seccion1.sass
+++ b/pportafolio/css/_seccion1.sass
@@ -96,3 +96,12 @@
 			&:hover
 				-web-kit-transform: scale(1.3)
 				transform: scale(1.3)
+		.diez
+			background: url("../../img/diez.png")
+			background-size: 400px 200px
+			background-position: center
+			background-repeat: no-repeat
+			transition: .5s
+			&:hover
+				-web-kit-transform: scale(1.3)
+				transform: scale(1.3)
