--- a/pportafolio/css/estilos.css
+++ b/pportafolio/css/estilos.css
@@ -130,6 +130,17 @@
   -web-kit-transform: scale(1.3);
   transform: scale(1.3);
 }
+.seccion1 .galeria .diez {
+  background: url("../../img/diez.png");
+  background-size: 400px 200px;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: 0.5s;
+}
+.seccion1 .galeria .diez:hover {
+  -web-kit-transform: scale(1.3);
+  transform: scale(1.3);
+}
 
 .seccion2 {
   height: 700px;
