--- a/pportafolio/css/estilos.css
+++ b/pportafolio/css/estilos.css
@@ -141,6 +141,17 @@
   -web-kit-transform: scale(1.3);
   transform: scale(1.3);
 }
+.seccion1 .galeria .once {
+  background: url("../../img/once.png");
+  background-size: 400px 200px;
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: 0.5s;
+}
+.seccion1 .galeria .once:hover {
+  -web-kit-transform: scale(1.3);
+  transform: scale(1.3);
+}
 
 .seccion2 {
   height: 700px;
